--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <div id="synth">
           <div id="splash-screen">
             <h3>Instructions:</h3>
-            <h3>Click the squares to light them up then hit play!</h3>
+            <ul>
+              <h4>Press on the squares to light them up then hit play.</h4>
+              <h4>Press stop first to make changes.</h4>
+            </ul>
+            
             <button id="start-button">Start</button>
           </div>
           
